[MT-4653] Fix z-index of block resize button

--- a/packages/slate-editor/src/components/EditorBlock/EditorBlock.module.scss
+++ b/packages/slate-editor/src/components/EditorBlock/EditorBlock.module.scss
@@ -38,7 +38,7 @@
 }
 
 .menu {
-    z-index: $editor-v4-embed-element-overlay-z-index + 1;
+    z-index: $editor-v4-embed-element-overlay-z-index + 2;
 }
 
 .resizeButton {
